--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "sonus": "^1.0.3",
+    "@picovoice/porcupine-node": "^1.9.0",
+    "node-record-lpcm16": "^1.0.1",
     "@google-cloud/speech": "^4.4.0",
-    "axios": "^0.21.1",
-    "jsdom": "^16.5.1"
+    "puppeteer": "^1.11.0",
+    "axios": "^0.21.1"
   },
   "engines": {
     "node": ">= 10.10.0",
